--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+
+
   <link href="main.css" rel="stylesheet">
   <title>Auth Components</title>
 </head>
@@ -128,12 +131,16 @@
               <div class="col col-3 ps-4 pb-4">
                 <img src="./img/authpill_yn.png" class="mb-2 mw-50" style="width: 65px;"  />
                 <p><strong>Y/N Auth - Name Authentication</strong></p>
+
+                <p><em>Yes/No - Name Auth is the <strong>required, first step of authentication</strong> for any call that uses auths.</em></p>
               </div>
               <div class="col col-9 border-start border-dark px-4 pt-0 pb-4">
-                <h5>When to use it</h5>
+
+
+
+                <h5><i class="bi-question-circle" style="font-size: 1.4rem; margin-top:7px;"></i> When to use it</h5>
                 <hr />
-                <p><em>
-                  Yes/No - Name Auth is the <strong>required, first step of authentication</strong> for any call that uses auths.</em></p>
+         
 
                 <ul>
                   <li><strong>Does the call require a single point of authentication?</strong><br /> Use Yes/No Name Auth.</li>
@@ -141,9 +148,9 @@
                     Start with Yes/No Name Auth.</li>
                 </ul>
 
-                <p><strong>So...</strong>You will always use Yes/No - Name Auth, in any call that requires authentication.</p>
+                <p>You will always use Yes/No - Name Auth, in any call that requires authentication.</p>
 
-                <h5>About</h5>
+                <h5><i class="bi bi-plus-slash-minus"></i> About</h5>
                 <hr />
                 <p class="leader">Advantages/Options</p>
                 <ul>
@@ -154,7 +161,7 @@
                   <li>None</li>
                 </ul>
 
-                <h5>Technicals</h5>
+                <h5><i class="bi bi-exclamation-circle"></i> Requirements</h5>
                 <hr />
                 <table class="table table-striped table-bordered tech-table">
                   <tr>
@@ -173,7 +180,7 @@
                     </td>
                   </tr>
                 </table>
-                <h5>Script Sample</h5>
+                <h5><i class="bi bi-keyboard"></i> Script Sample</h5>
                 <hr />
                 <img src="./img/script-yn-name.png" class="w-100">
               </div>
@@ -216,7 +223,7 @@
                           <li>None</li>
                         </ul>
         
-                        <h5>Technicals</h5>
+                        <h5><i class="bi bi-exclamation-circle"></i> Requirements</h5>
                         <hr />
                         <table class="table table-striped table-bordered tech-table">
                           <tr>
