starting form index

--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
         </div>
       </div> <!-- END SIDEBAR-->
 
+      <!-- START MAIN -->
       <div id="main" class="col p-5">
+
+        <!-- FORM -->
 
         <div id="name-auth" class="type-of-auth p-2">
           <h2 class="ms-2"><i class="bi bi-person-check-fill"></i>
